src/css/style.css
/* ... */
.newsletter-fields {
  display: grid;
}

/* Start cart list card styles */
.cart-card {
  display: grid;
  grid-template-columns: 25% auto 15%;
  font-size: var(--small-font);
  /* max-height: 120px; */
  align-items: center;
}

/*************** START ADDED TO SYLE THE REMOVE FROM CART IMAGE ETC ****************/
.card__delete {
  padding-top: 0.5rem;
  max-width: 50px;
  grid-row: 1;
  grid-column: 1;
}

.cart-card__image {
  grid-row: 2/3; /* Changed position */
  grid-column: 1;
  margin-top: -8px; /* Changed position */
}

.cart-card .card__name {
  grid-row: 1;
  grid-column: 2;
  margin-left: -80px; /* Changed position */
}
/**************** END ADDED TO SYLE THE REMOVE FROM CART IMAGE ETC *****************/

.item-quantity {
  display: flex;
  align-items: center;
  border-top: 1px solid #303030;
  border-bottom: 1px solid #303030;
  margin: 0.5em;
}
.item-quantity button {
  cursor: pointer;
  padding: 7px 10px;
  border-radius: none;
  font-size: smaller;
}
.total-items {
  margin: 0.5em;
}

.cart-card p {
  margin-top: 0;
}

.cart-card__color {
  grid-row: 2;
  grid-column: 2;
}

.cart-card__quantity {
  grid-row: 1;
  grid-column: 3;
}

.cart-card__price {
  grid-row: 2;
  grid-column: 3;
}

.cart-footer {
  display: grid;
  grid-template-columns: auto 25%;
}
.hide {
  display: none;
}
.cart-total {
  grid-column: 2;
}

/******************* START ADDED CSS FOR THE HOME PAGE 4 PRODUCT ICONS ********************************/
.product-categories {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  list-style-type: none;
  max-width: 80%;
  margin: auto;
}

.product-categories li {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.product-categories li a {
  width: 100%;
  text-decoration: none;
  color: black;
  text-align: center;
}
/******************* END ADDED CSS FOR THE HOME PAGE 4 PRODUCT ICONS ********************************/

/**************************** START OF ADDED FOR DISCOUNT EMPHESIS **************************/
.product-card__discount,
.base__discount {
  /*PRODUCT-LISTING PAGE*/
  color: red;
  text-decoration: solid 3px underline;
  text-shadow: 1px 1px 10px white, 1px 1px 10px white;
}

.product-card__price {
  color: green;
  text-decoration: solid 3px underline;
  text-shadow: 1px 1px 10px var(--primary-color), 1px 1px 10px #ffff00;
  margin-left: 6px;
}

.container__origin-price {
  text-shadow: 1px 1px 10px white, -1px -1px 10px white;
  margin-left: 15px;
}

.product-card__orginal-price,
.base__orginal-price {
  /*PRODUCT-LISTING PAGE*/
  text-decoration: line-through;
}

div.pricing-container {
  border: 5px solid rgb(255, 102, 0);
  border-radius: 0.5rem;
  background-color: rgba(255, 255, 0, 0.2);
  width: fit-content;
  padding: 0 1rem;
  margin-top: 20px;
}

.descriptor-label {
  font-weight: 600;
}

/**************************** END OF ADDED FOR DISCOUNT EMPHESIS **************************/

/******* START OF STYLING FOR DISCOUNT FLAG ON PRODUCT DETAILS & PRODUCT lISTING PAGE******/
img#product-img {
  position: relative;
}

div.flag-container {
  position: absolute;
  top: 25%;
  left: 30%;
}

div.base_flag-container {
  /*PRODUCT-LISTING PAGE*/
  margin-left: 120px;
  margin-top: -180px;
}

img.discount-flag {
  position: relative;
  width: 100%;
}

img.base_discount-flag {
  /*PRODUCT-LISTING PAGE*/
  width: 100px;
}

p.flag-amount {
  position: absolute;
  top: 9%;
  left: 27%;
  color: white;
  font-weight: 900;
  font-size: 1.75rem;
  text-align: center;
  line-height: 1.1;
}

p.base_flag-amount {
  /*PRODUCT-LISTING PAGE*/
  margin-left: 33px;
  margin-top: -78px;
  padding-bottom: 100px;
  color: white;
  font-weight: 700;
}
/******* END OF STYLING FOR DISCOUNT FLAG ON PRODUCT DETAILS & PRODUCT lISTING PAGE******/

/*************************** START OF CSS ADDED FOR DETAILS QUICK ACCESS BUTTON ************************/
button.details-btn {
  margin: -25px 6px 0 auto;
  padding: 3px 10px;
  font-size: 0.75rem;
}
/*************************** END OF CSS ADDED FOR DETAILS QUICK ACCESS BUTTON ************************/

/**** START OF MODAL POP-UP FOR THE PRODUCT-LISTING PAGE'S DETAILS QUICK ACCESS BUTTON ****/
/* Changes to the Discount Flag Placement */
div.flag-container.pop-up {
  top: 47%;
  left: 38%;
}
p.flag-amount.pop-up {
  top: 17%;
}
img#product-img.pop-up {
  width: 50%;
  margin-left: 150px;
}
/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0, 0, 0); /* Fallback color */
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-content {
  background-color: #fefefe;
  margin: 15% auto; /* 15% from the top and centered */
  padding: 20px;
  border: 1px solid #888;
  width: 500px; /* Could be more or less, depending on screen size */
}

/* The Close Button */
.close {
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}
/**** END OF MODAL POP-UP FOR THE PRODUCT-LISTING PAGE'S DETAILS QUICK ACCESS BUTTON ****/

/*************************** START OF ADDED FOR CHECKOUT BUTTON ********************************/
button.cart-checkout {
  margin: 0 0 0 auto;
  padding-left: 6rem;
  padding-right: 6rem;
}

button.cart-checkout:hover {
  cursor: pointer;
}

a.checkout-button-link {
  text-decoration: none;
}
/*************************** END OF ADDED FOR CHECKOUT BUTTON ********************************/

/*************************** START OF FORM CSS FOR CHECKOUT PAGE *******************************/
#orderForm {
  max-width: 50%;
  min-width: 400px;
  margin: 2em auto;
}
form fieldset,
fieldset {
  margin: 2rem 0;
  border: 2px solid var(--primary-color);
  border-radius: 10px;
  padding: 0.5rem 2%;
}
/* ... */

